--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 			.fen{
 				position:absolute;
-				/*background:rgba(255,255,255,0.5)*/
+				background:rgba(255,255,255,0.5)
 			}
 			.fen >*{
 				margin:auto;
@@ -17,10 +17,7 @@
 			height:100%;
 			
 		}
-		.max{
-		width:100%;
-		height:100%;
-		}
+
 			.radio{
 				width:20px !important;
 				height:20px !important;
@@ -388,24 +385,8 @@
 			}
 		.fen{
 		    height: calc(100% + 1px);
-			position:absolute;
+			position:fixed;
 			width:100%;
-		}
-		.fixed{
-			position:fixed;
-		}
-
-		.fen > form{
-			display: inline-block;
-			border-radius: 15px;
-			box-shadow: 5px 5px 5px #888888;
-			background-color: #DAD8D8;
-			padding: 5px 15px 5px 15px;
-			position:fixed;
-			top:50%;
-			left:50%;
-			transform: translate(-50%, -50%);
-			z-index:10;
 		}
 		
 		.A4 {
@@ -468,8 +449,8 @@
 		
 		
 		@media print {
-			.AjoutCol{
-			  display:none !important;
+      .AjoutCol{
+          display:none !important;
 			}
 			.A4 {
               width:100%;
